my-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-project-fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-project-fastapi
  template:
    metadata:
      labels:
        app: my-project-fastapi
    spec:
      containers:
      - name: my-project-fastapi
        image: khedidja/my_project_fastapi:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
