my-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-project-fastapi-service
spec:
  type: ClusterIP
  ports:
  - port: 8002
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-project-fastapi
